[package]
name = "apalis-sql"
version = "1.0.0-beta.2"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition.workspace = true
repository.workspace = true
readme = "README.md"
publish = true

license = "MIT"
description = "SQL utilities for background job processing with apalis"
keywords = ["job", "task", "scheduler", "worker", "sql"]
categories = ["database", "asynchronous"]

[dependencies]
apalis-core = { path = "../apalis-core", version = "1.0.0-beta.2", default-features = false, features = [
    "sleep",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
