[package]
name = "apalis-workflow"
version = "0.1.0-beta.2"
edition.workspace = true
repository.workspace = true
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
license = "MIT"
description = "A flexible and composable task workflow engine for rust"
publish = true

[features]
default = ["tracing", "ulid"]
## Enable tracing support
tracing = ["dep:tracing", "apalis-core/tracing"]
## Enable ulid support for task ids
ulid = ["dep:ulid"]
## Enable uuid support for task ids
uuid = ["dep:uuid"]

[dependencies]
petgraph = { version = "0.8.2", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.5", features = ["util"], default-features = false }
apalis-core = { path = "../apalis-core", version = "1.0.0-beta.2", default-features = false, features = [
    "sleep",
    "json",
] }
futures = "0.3.30"
thiserror = "2.0.0"
# TODO: move to workspace dependencies
tracing = { version = "0.1.41", default-features = false, optional = true }
ulid = { version = "1", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync"] }
serde_json = "1"

[lints]
workspace = true
