[package]
name = "actix-web-example"
version = "0.1.0"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
apalis = { path = "../../", features = ["redis"] }
serde = "1"
env_logger = "0.10"
actix-web = "4"
futures = "0.3"
email-service = { path = "../email-service" }
