[package]
name = "basics"
version = "0.1.0"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"] }
apalis = { path = "../../", features = ["sqlite", "limit", "tokio-comp"] }
serde = "1"
tracing-subscriber = "0.3.11"
email-service = { path = "../email-service" }
futures = "0.3"
tower = "0.4"


[dependencies.tracing]
default_features = false
version = "0.1"
