[package]
name = "basics"
version = "0.1.0"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "2.0.0"
tokio = { version = "1", features = ["full"] }
apalis = { path = "../../apalis", features = ["limit", "catch-panic", "tracing"] }
apalis-core = { path = "../../apalis-core" , features = ["json"]}
serde = "1"
serde_json = "1"
tracing-subscriber = "0.3.20"
email-service = { path = "../email-service" }
futures = "0.3"
tower = "0.4"


[dependencies.tracing]
default-features = false
version = "0.1"
