[package]
name = "mysql-example"
version = "0.1.0"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
apalis = { path = "../../", features = ["tracing"], default-features = false }
apalis-sql = { path = "../../packages/apalis-sql", features = ["mysql"] }
serde = "1"
tracing-subscriber = "0.3.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["full"] }
email-service = { path = "../email-service" }


[dependencies.tracing]
default-features = false
version = "0.1"
