[package]
name = "prometheus-example"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
axum = "0.5.6"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
apalis = { path = "../../apalis", features = ["prometheus"] }
apalis-core = { path = "../../apalis-core", features = ["json"] }
futures = "0.3"
metrics-exporter-prometheus = "0.17"
email-service = { path = "../email-service" }
