[package]
name = "redis-example"
version = "0.1.0"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
apalis = { path = "../../" }
apalis-redis = { path = "../../packages/apalis-redis" }
serde = "1"
actix = "0.10"
actix-rt = "1"
env_logger = "0.7"