[package]
name = "sentry-example"
version = "0.1.0"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
actix = "0.13"
apalis = { path = "../../", features = ["redis", "sentry"] }
serde = "1"
actix-rt = "2"
env_logger = "0.7"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
sentry = "0.25"
sentry-tower = "0.25.0"
sentry-tracing = "0.25.0"
chrono = { version = "0.4" }


[dependencies.tracing]
default_features = false
version = "0.1"
