[package]
name = "sentry-example"
version = "0.1.0"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
apalis = { path = "../../", features = ["redis", "sentry"] }
serde = "1"
env_logger = "0.10"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
sentry = "0.31"
sentry-tower = "0.31"
sentry-tracing = "0.31"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features=["macros"] }
email-service = { path = "../email-service" }


[dependencies.tracing]
default_features = false
version = "0.1"
