[package]
name = "smol-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
smol = "1"
apalis = { path = "../../", features = ["cron"] }
serde = "1"
tracing-subscriber = "0.3.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pin-project-lite = "0.2.9"
smol-timeout = "0.6.0"


[dependencies.tracing]
default_features = false
version = "0.1"
