[package]
name = "sqlite-example"
version = "0.1.0"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
apalis = { path = "../../", features = [
    "sqlite",
    "limit",
    "tracing",
    "tokio-comp",
] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
email-service = { path = "../email-service" }


[dependencies.tracing]
default_features = false
version = "0.1"

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["sqlite"]
