[package]
name = "tracing-example"
version = "0.1.0"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
apalis = { path = "../../", features = ["redis"] }
serde = "1"
tokio = { version ="1", features = ["macros"]}
env_logger = "0.7"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
chrono = { version = "0.4" }
email-service = { path = "../email-service" }


[dependencies.tracing]
default_features = false
version = "0.1"

