[package]
name = "screenshot-example"
version = "0.1.0"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features=["macros"] }
apalis = { path = "../../", features = ["sqlite", "limit"] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
twitter-stream = "0.13"