[package]
name = "unmonitored-worker"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
apalis = { path = "../../apalis", features = ["limit", "catch-panic"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3.20"
futures = "0.3"
tower = "0.4"


[dependencies.tracing]
default-features = false
version = "0.1"
